--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="#">Sustainable Shop</a>
@@ -34,7 +33,6 @@
       </div>
     </nav>
 
-    <!-- Product Listing -->
     <div class="container my-5">
       <div class="row mb-3">
         <div class="col-12">
@@ -51,11 +49,10 @@
         </div>
       </div>
       <div class="row" id="product-list">
-        <!-- Dynamic Product Cards -->
+        <!-- Product Cards -->
       </div>
     </div>
 
-    <!-- Offcanvas Cart -->
     <div class="offcanvas offcanvas-end" tabindex="-1" id="cartCanvas" aria-labelledby="cartCanvasLabel">
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="cartCanvasLabel">Your Cart</h5>
@@ -63,7 +60,6 @@
       </div>
       <div class="offcanvas-body">
         <div id="cart-items">
-          <!-- Cart Items -->
         </div>
         <div class="cart-total text-end mt-3">
           <strong>Total: $<span id="cart-total">0.00</span></strong>
@@ -72,9 +68,7 @@
       </div>
     </div>
 
-    <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- JavaScript for Cart and Product Filter -->
     <script src="main.js"></script>
   </body>
 </html>
