--- a/admin/admin.html
+++ b/admin/admin.html
@@ -1,70 +1,94 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sustainable Shop Admin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="admin.css">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">Sustainable Shop Admin</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/admin/admin.html">Admin</a>
-            </li>
-          </ul>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+        <div class="container">
+            <a class="navbar-brand" href="#"><i class="fas fa-leaf me-2"></i>Sustainable Shop Admin</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/index.html"><i class="fas fa-home me-1"></i>Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/admin/admin.html"><i class="fas fa-cog me-1"></i>Admin</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
     <div class="container my-5">
-      <h2>Manage Products</h2>
-      <form id="product-form" class="mb-5">
-        <input type="hidden" id="product-id">
-        <div class="mb-3">
-          <label for="product-name" class="form-label">Product Name</label>
-          <input type="text" class="form-control" id="product-name" required>
+        <h2 class="text-success mb-4"><i class="fas fa-box-open me-2"></i>Manage Products</h2>
+        <div class="card mb-5">
+            <div class="card-body">
+                <h5 class="card-title mb-3">Add/Edit Product</h5>
+                <form id="product-form">
+                    <input type="hidden" id="product-id">
+                    <div class="mb-3">
+                        <label for="product-name" class="form-label">Product Name</label>
+                        <input type="text" class="form-control" id="product-name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="product-category" class="form-label">Category</label>
+                        <select class="form-select" id="product-category" required>
+                            <option value="clothes">Clothes</option>
+                            <option value="beauty">Beauty</option>
+                            <option value="utility">Utility</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="product-price" class="form-label">Price</label>
+                        <div class="input-group">
+                            <span class="input-group-text">$</span>
+                            <input type="number" class="form-control" id="product-price" step="0.01" required>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="product-img" class="form-label">Image URL</label>
+                        <input type="url" class="form-control" id="product-img" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="product-description" class="form-label">Description</label>
+                        <textarea class="form-control" id="product-description" rows="3" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-success"><i class="fas fa-save me-2"></i>Save Product</button>
+                </form>
+            </div>
         </div>
-        <div class="mb-3">
-          <label for="product-category" class="form-label">Category</label>
-          <select class="form-select" id="product-category" required>
-            <option value="clothes">Clothes</option>
-            <option value="beauty">Beauty</option>
-            <option value="utility">Utility</option>
-          </select>
-        </div>
-        <div class="mb-3">
-          <label for="product-price" class="form-label">Price</label>
-          <input type="number" class="form-control" id="product-price" step="0.01" required>
-        </div>
-        <div class="mb-3">
-          <label for="product-img" class="form-label">Image URL</label>
-          <input type="url" class="form-control" id="product-img" required>
-        </div>
-        <div class="mb-3">
-          <label for="product-description" class="form-label">Description</label>
-          <textarea class="form-control" id="product-description" rows="3" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Save Product</button>
-      </form>
 
-      <h3>Product List</h3>
-      <div class="row" id="admin-product-list">
-      </div>
+        <h3 class="text-success mb-4"><i class="fas fa-list me-2"></i>Product List</h3>
+        <div class="row" id="admin-product-list">
+            <!-- Product cards will be inserted here -->
+        </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <footer class="bg-success text-light py-4 mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5><i class="fas fa-leaf me-2"></i>Sustainable Shop</h5>
+                    <p>Admin Panel - Manage your sustainable products</p>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <p>&copy; 2024 Sustainable Shop. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="admin.js"></script>
-  </body>
+</body>
 </html>
