--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -5,75 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout - Sustainable Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <style>
-        .card-number-input {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-        }
-        .card-number-input input {
-            width: 22%;
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
-    <div class="container my-5">
-        <h2 class="mb-4">Checkout</h2>
-        <div class="row">
-            <div class="col-md-8">
-                <h3>Order Summary</h3>
-                <div id="checkout-items"></div>
-                <div class="mt-3">
-                    <strong>Total: $<span id="checkout-total">0.00</span></strong>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+        <div class="container">
+            <a class="navbar-brand" href="#"><i class="fas fa-leaf me-2"></i>Sustainable Shop</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/index.html"><i class="fas fa-home me-1"></i>Home</a>
+                    </li>
+                </ul>
             </div>
-            <div class="col-md-4">
-                <h3>Payment Details</h3>
-                <form id="payment-form">
-                    <div class="mb-3">
-                        <label for="card-number" class="form-label">Card Number</label>
-                        <div class="card-number-input">
-                            <input type="text" class="form-control" id="card-number-1" maxlength="4" required>
-                            <input type="text" class="form-control" id="card-number-2" maxlength="4" required>
-                            <input type="text" class="form-control" id="card-number-3" maxlength="4" required>
-                            <input type="text" class="form-control" id="card-number-4" maxlength="4" required>
-                        </div>
+        </div>
+    </nav>
+
+    <div class="container my-5">
+        <div class="checkout-container">
+            <h2 class="mb-4 text-success"><i class="fas fa-shopping-cart me-2"></i>Checkout</h2>
+            <div class="row">
+                <div class="col-md-8">
+                    <h3 class="text-success mb-3">Order Summary</h3>
+                    <div id="checkout-items"></div>
+                    <div class="mt-3">
+                        <strong>Total: $<span id="checkout-total">0.00</span></strong>
                     </div>
-                    <div class="mb-3">
-                        <label for="card-name" class="form-label">Name on Card</label>
-                        <input type="text" class="form-control" id="card-name" required>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="card-expiry-month" class="form-label">Expiry Date</label>
-                            <div class="d-flex">
-                                <select class="form-select me-2" id="card-expiry-month" required>
-                                    <option value="">MM</option>
-                                    <option value="01">01</option>
-                                    <option value="02">02</option>
-                                    <option value="03">03</option>
-                                    <option value="04">04</option>
-                                    <option value="05">05</option>
-                                    <option value="06">06</option>
-                                    <option value="07">07</option>
-                                    <option value="08">08</option>
-                                    <option value="09">09</option>
-                                    <option value="10">10</option>
-                                    <option value="11">11</option>
-                                    <option value="12">12</option>
-                                </select>
-                                <input type="text" class="form-control" id="card-expiry-year" placeholder="YY" maxlength="2" required>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="text-success mb-3">Payment Details</h3>
+                    <form id="payment-form">
+                        <div class="mb-3">
+                            <label for="card-number" class="form-label">Card Number</label>
+                            <div class="card-input">
+                                <i class="fas fa-credit-card text-success me-2"></i>
+                                <input type="text" id="card-number" maxlength="19" placeholder="xxxx xxxx xxxx xxxx" required>
                             </div>
                         </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="card-cvv" class="form-label">CVV</label>
-                            <input type="text" class="form-control" id="card-cvv" maxlength="3" required>
+                        <div class="mb-3">
+                            <label for="card-name" class="form-label">Name on Card</label>
+                            <input type="text" class="form-control" id="card-name" required>
                         </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Complete Purchase</button>
-                </form>
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="card-expiry-month" class="form-label">Expiry Date</label>
+                                <div class="d-flex">
+                                    <select class="form-select me-2" id="card-expiry-month" required>
+                                        <option value="">MM</option>
+                                        <option value="01">01</option>
+                                        <option value="02">02</option>
+                                        <option value="03">03</option>
+                                        <option value="04">04</option>
+                                        <option value="05">05</option>
+                                        <option value="06">06</option>
+                                        <option value="07">07</option>
+                                        <option value="08">08</option>
+                                        <option value="09">09</option>
+                                        <option value="10">10</option>
+                                        <option value="11">11</option>
+                                        <option value="12">12</option>
+                                    </select>
+                                    <input type="text" class="form-control" id="card-expiry-year" placeholder="YY" maxlength="2" required>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="card-cvv" class="form-label">CVV</label>
+                                <input type="text" class="form-control" id="card-cvv" maxlength="3" required>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-success w-100"><i class="fas fa-lock me-2"></i>Complete Purchase</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
@@ -81,19 +88,33 @@
     <div class="modal fade" id="checkoutModal" tabindex="-1" aria-labelledby="checkoutModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="checkoutModalLabel">Checkout Complete</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <div class="modal-header bg-success text-white">
+                    <h5 class="modal-title" id="checkoutModalLabel"><i class="fas fa-check-circle me-2"></i>Checkout Complete</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Thank you for your purchase! This is a demo, so no actual payment has been processed.
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="modalCloseBtn">Close</button>
+                    <button type="button" class="btn btn-success" data-bs-dismiss="modal" id="modalCloseBtn">Close</button>
                 </div>
             </div>
         </div>
     </div>
+
+    <footer class="bg-success text-light py-4 mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5><i class="fas fa-leaf me-2"></i>Sustainable Shop</h5>
+                    <p>Eco-friendly products for a better world</p>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <p>&copy; 2024 Sustainable Shop. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="checkout.js"></script>
