--- a/index.html
+++ b/index.html
@@ -1,74 +1,147 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sustainable Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">Sustainable Shop</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/admin/admin.html">Admin</a>
-            </li>
-          </ul>
-          <div class="d-flex">
-            <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#cartCanvas">
-              <svg class="bi" width="24" height="24"><use href="#cart"></use></svg> Cart
-              <span class="badge bg-light text-dark" id="cart-count">0</span>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+        <div class="container">
+            <a class="navbar-brand" href="#"><i class="fas fa-leaf me-2"></i>Sustainable Shop</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
             </button>
-          </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#"><i class="fas fa-home me-1"></i>Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/admin.html"><i class="fas fa-cog me-1"></i>Admin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about"><i class="fas fa-info-circle me-1"></i>About</a>
+                    </li>
+                </ul>
+                <div class="d-flex">
+                    <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#cartCanvas">
+                        <i class="fas fa-shopping-cart me-1"></i> Cart
+                        <span class="badge bg-light text-success" id="cart-count">0</span>
+                    </button>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
     <div class="container my-5">
-      <div class="row mb-3">
-        <div class="col-12">
-          <h2>Products</h2>
-          <div class="input-group mb-3">
-            <span class="input-group-text">Filter by Category</span>
-            <select class="form-select" id="category-filter">
-              <option value="all">All</option>
-              <option value="clothes">Clothes</option>
-              <option value="beauty">Beauty</option>
-              <option value="utility">Utility</option>
-            </select>
-          </div>
+        <div class="row mb-3">
+            <div class="col-12">
+                <h2 class="text-success"><i class="fas fa-store me-2"></i>Our Products</h2>
+                <div class="input-group mb-3">
+                    <span class="input-group-text bg-success text-light"><i class="fas fa-filter me-1"></i>Filter by Category</span>
+                    <select class="form-select" id="category-filter">
+                        <option value="all">All</option>
+                        <option value="clothes">Clothes</option>
+                        <option value="beauty">Beauty</option>
+                        <option value="utility">Utility</option>
+                    </select>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="row" id="product-list">
-        <!-- Product Cards -->
-      </div>
+        <div class="row" id="product-list">
+            <!-- Product Cards will be inserted here -->
+        </div>
     </div>
 
+    <div class="bg-light py-5" id="about">
+        <div class="container">
+            <h2 class="text-success mb-4"><i class="fas fa-leaf me-2"></i>About Our Sustainable Shop</h2>
+            <p>We are committed to providing eco-friendly and sustainable products that help reduce our environmental impact. Our products are carefully selected to ensure they meet the highest standards of sustainability and quality.</p>
+            <div class="row mt-4">
+                <div class="col-md-4 mb-3">
+                    <div class="card h-100 border-success">
+                        <div class="card-body text-center">
+                            <i class="fas fa-recycle fa-3x text-success mb-3"></i>
+                            <h5 class="card-title">Eco-Friendly Materials</h5>
+                            <p class="card-text">Our products are made from recycled or sustainably sourced materials.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="card h-100 border-success">
+                        <div class="card-body text-center">
+                            <i class="fas fa-shipping-fast fa-3x text-success mb-3"></i>
+                            <h5 class="card-title">Sustainable Shipping</h5>
+                            <p class="card-text">We use minimal and recyclable packaging for all our shipments.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="card h-100 border-success">
+                        <div class="card-body text-center">
+                            <i class="fas fa-hand-holding-heart fa-3x text-success mb-3"></i>
+                            <h5 class="card-title">Giving Back</h5>
+                            <p class="card-text">A portion of our profits goes to environmental conservation efforts.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="bg-success text-light py-4 mt-5">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-4 mb-3 mb-md-0">
+                  <h5><i class="fas fa-leaf me-2"></i>Sustainable Shop</h5>
+                  <p>Making the world greener, one product at a time.</p>
+              </div>
+              <div class="col-md-4 mb-3 mb-md-0">
+                  <h5>Quick Links</h5>
+                  <ul class="list-unstyled">
+                      <li><a href="#" class="text-light"><i class="fas fa-chevron-right me-2"></i>Home</a></li>
+                      <li><a href="#about" class="text-light"><i class="fas fa-chevron-right me-2"></i>About</a></li>
+                      <li><a href="#" class="text-light"><i class="fas fa-chevron-right me-2"></i>Products</a></li>
+                  </ul>
+              </div>
+              <div class="col-md-4">
+                  <h5>Contact Us</h5>
+                  <ul class="list-unstyled">
+                      <li><i class="fas fa-envelope me-2"></i>info@sustainableshop.com</li>
+                      <li><i class="fas fa-phone me-2"></i>(123) 456-7890</li>
+                      <li><i class="fas fa-map-marker-alt me-2"></i>123 Eco Street, Green City</li>
+                  </ul>
+              </div>
+          </div>
+          <hr class="mt-4 mb-3">
+          <div class="text-center">
+              <p class="mb-0">&copy; 2024 Sustainable Shop. All rights reserved.</p>
+          </div>
+      </div>
+  </footer>
+  
     <div class="offcanvas offcanvas-end" tabindex="-1" id="cartCanvas" aria-labelledby="cartCanvasLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="cartCanvasLabel">Your Cart</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
-      </div>
-      <div class="offcanvas-body">
-        <div id="cart-items">
+        <div class="offcanvas-header bg-success text-light">
+            <h5 class="offcanvas-title" id="cartCanvasLabel"><i class="fas fa-shopping-cart me-2"></i>Your Cart</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="cart-total text-end mt-3">
-          <strong>Total: $<span id="cart-total">0.00</span></strong>
+        <div class="offcanvas-body">
+            <div id="cart-items">
+                <!-- Cart items will be inserted here -->
+            </div>
+            <div class="cart-total text-end mt-3">
+                <strong>Total: $<span id="cart-total">0.00</span></strong>
+            </div>
+            <a href="/checkout/checkout.html" class="btn btn-success w-100 mt-3"><i class="fas fa-credit-card me-2"></i>Proceed to Checkout</a>
         </div>
-        <a href="/checkout/checkout.html" class="btn btn-success w-100 mt-3">Proceed to Checkout</a>
-      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
-  </body>
+</body>
 </html>
