--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
             <a class="navbar-brand" href="#"><i class="fas fa-leaf me-2"></i>Sustainable Shop</a>
@@ -25,6 +26,7 @@
             </div>
         </div>
     </nav>
+
 
     <div class="container my-5">
         <div class="checkout-container">
@@ -78,7 +80,10 @@
                                 <input type="text" class="form-control" id="card-cvv" maxlength="3" required>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-success w-100"><i class="fas fa-lock me-2"></i>Complete Purchase</button>
+                        <button type="submit" class="btn btn-success w-100"><i class="fas fa-lock me-2"></i>Complete Purchase</button>         
+                        <div class="spinner-border text-success d-none mt-3" id="loading-spinner" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>          
                     </form>
                 </div>
             </div>
