--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body class="d-flex flex-column min-vh-100"> 
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
             <a class="navbar-brand" href="#"><i class="fas fa-leaf me-2"></i>Sustainable Shop</a>
@@ -27,87 +27,88 @@
         </div>
     </nav>
 
-
-    <div class="container my-5">
-        <div class="checkout-container">
-            <h2 class="mb-4 text-success"><i class="fas fa-shopping-cart me-2"></i>Checkout</h2>
-            <div class="row">
-                <div class="col-md-8">
-                    <h3 class="text-success mb-3">Order Summary</h3>
-                    <div id="checkout-items"></div>
-                    <div class="mt-3">
-                        <strong>Total: $<span id="checkout-total">0.00</span></strong>
+    <section class="container__global flex-grow-1"> 
+        <div class="container my-5">
+            <div class="checkout-container">
+                <h2 class="mb-4 text-success"><i class="fas fa-shopping-cart me-2"></i>Checkout</h2>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h3 class="text-success mb-3">Order Summary</h3>
+                        <div id="checkout-items"></div>
+                        <div class="mt-3">
+                            <strong>Total: $<span id="checkout-total">0.00</span></strong>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <h3 class="text-success mb-3">Payment Details</h3>
-                    <form id="payment-form">
-                        <div class="mb-3">
-                            <label for="card-number" class="form-label">Card Number</label>
-                            <div class="card-input">
-                                <i class="fas fa-credit-card text-success me-2"></i>
-                                <input type="text" id="card-number" maxlength="19" placeholder="xxxx xxxx xxxx xxxx" required>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="card-name" class="form-label">Name on Card</label>
-                            <input type="text" class="form-control" id="card-name" required>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <label for="card-expiry-month" class="form-label">Expiry Date</label>
-                                <div class="d-flex">
-                                    <select class="form-select me-2" id="card-expiry-month" required>
-                                        <option value="">MM</option>
-                                        <option value="01">01</option>
-                                        <option value="02">02</option>
-                                        <option value="03">03</option>
-                                        <option value="04">04</option>
-                                        <option value="05">05</option>
-                                        <option value="06">06</option>
-                                        <option value="07">07</option>
-                                        <option value="08">08</option>
-                                        <option value="09">09</option>
-                                        <option value="10">10</option>
-                                        <option value="11">11</option>
-                                        <option value="12">12</option>
-                                    </select>
-                                    <input type="text" class="form-control" id="card-expiry-year" placeholder="YY" maxlength="2" required>
+                    <div class="col-md-4">
+                        <h3 class="text-success mb-3">Payment Details</h3>
+                        <form id="payment-form">
+                            <div class="mb-3">
+                                <label for="card-number" class="form-label">Card Number</label>
+                                <div class="card-input">
+                                    <i class="fas fa-credit-card text-success me-2"></i>
+                                    <input type="text" id="card-number" maxlength="19" placeholder="xxxx xxxx xxxx xxxx" required>
                                 </div>
                             </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="card-cvv" class="form-label">CVV</label>
-                                <input type="text" class="form-control" id="card-cvv" maxlength="3" required>
+                            <div class="mb-3">
+                                <label for="card-name" class="form-label">Name on Card</label>
+                                <input type="text" class="form-control" id="card-name" required>
                             </div>
-                        </div>
-                        <button type="submit" class="btn btn-success w-100"><i class="fas fa-lock me-2"></i>Complete Purchase</button>         
-                        <div class="spinner-border text-success d-none mt-3" id="loading-spinner" role="status">
-                            <span class="visually-hidden">Loading...</span>
-                        </div>          
-                    </form>
+                            <div class="row">
+                                <div class="col-md-6 mb-3">
+                                    <label for="card-expiry-month" class="form-label">Expiry Date</label>
+                                    <div class="d-flex">
+                                        <select class="form-select me-2" id="card-expiry-month" required>
+                                            <option value="">MM</option>
+                                            <option value="01">01</option>
+                                            <option value="02">02</option>
+                                            <option value="03">03</option>
+                                            <option value="04">04</option>
+                                            <option value="05">05</option>
+                                            <option value="06">06</option>
+                                            <option value="07">07</option>
+                                            <option value="08">08</option>
+                                            <option value="09">09</option>
+                                            <option value="10">10</option>
+                                            <option value="11">11</option>
+                                            <option value="12">12</option>
+                                        </select>
+                                        <input type="text" class="form-control" id="card-expiry-year" placeholder="YY" maxlength="2" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <label for="card-cvv" class="form-label">CVV</label>
+                                    <input type="text" class="form-control" id="card-cvv" maxlength="3" required>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-success w-100"><i class="fas fa-lock me-2"></i>Complete Purchase</button>         
+                            <div class="spinner-border text-success d-none mt-3" id="loading-spinner" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>          
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="modal fade" id="checkoutModal" tabindex="-1" aria-labelledby="checkoutModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header bg-success text-white">
-                    <h5 class="modal-title" id="checkoutModalLabel"><i class="fas fa-check-circle me-2"></i>Checkout Complete</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Thank you for your purchase! This is a demo, so no actual payment has been processed.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-success" data-bs-dismiss="modal" id="modalCloseBtn">Close</button>
+        <div class="modal fade" id="checkoutModal" tabindex="-1" aria-labelledby="checkoutModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header bg-success text-white">
+                        <h5 class="modal-title" id="checkoutModalLabel"><i class="fas fa-check-circle me-2"></i>Checkout Complete</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Thank you for your purchase! This is a demo, so no actual payment has been processed.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success" data-bs-dismiss="modal" id="modalCloseBtn">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <footer class="bg-success text-light py-4 mt-5">
+    <footer class="bg-success text-light py-4 mt-auto"> 
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
